# StereoSystem

./: CMakeLists.txt  README.md  main.cpp  mystereocalib_0.17.yml  todo.md
ctrl/: ctrl.cpp  ctrl.h  procThread.cpp  procThread.h
cuda/: ColorConverter.cu  ColorConverter.cuh  StereoMatch.cu  StereoMatch.cuh  errorCheck.cuh
cuda/kernels/: ColorConverterKernels.cu  ColorConverterKernels.cuh  StereoMatchKernels.cu  StereoMatchKernels.cuh
grabber/: grabber.cpp  grabber.h
gui/: gui.cpp  gui.h
gui/forms/: mainform.ui
gui/widgets/: myGlWidget.cpp  myGlWidget.h
